// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartFormRadioItemPrice Соответствует snapshot Диапазон цен 1`] = `
<Fragment>
  0
  -
  <Memo()
    currencyId="RUB"
    value={100}
  />
</Fragment>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Ненулевая цена, без замещающего текста 1`] = `
<Memo()
  currencyId="RUB"
  value={100}
/>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Ненулевая цена, с непустым замещающим текстом 1`] = `
<Memo()
  currencyId="RUB"
  freeText="Только сегодня совершенно бесплатно!"
  value={100}
/>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Ненулевая цена, с пустым замещающим текстом 1`] = `
<Memo()
  currencyId="RUB"
  freeText=""
  value={100}
/>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Нулевая цена, без замещающего текста 1`] = `
<Memo()
  currencyId="RUB"
  freeText="Только сегодня совершенно бесплатно!"
  value={100}
/>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Нулевая цена, с непустым замещающим текстом 1`] = `
<Memo()
  currencyId="RUB"
  freeText="Только сегодня совершенно бесплатно!"
  value={0}
/>
`;

exports[`CartFormRadioItemPrice Соответствует snapshot Нулевая цена, с пустым замещающим текстом 1`] = `
<Memo()
  currencyId="RUB"
  freeText=""
  value={0}
/>
`;
